--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="We Are Jammin'" name="twitter:title" property="og:title">
     <meta content="A funny clip from Captain Underpants with Jetpack Joyride music. They are jammin!"
         name="twitter:description" property="og:description">
-    <meta content="https://we-are-jammin.xyz/jammin.png" name="twitter:image" property="og:image">
+    <meta content="https://jam.bbakhishov.com" name="twitter:image" property="og:image">
     <meta content="summary" name="twitter:card">
 
     <!-- how many nerds are actually using this site -->
@@ -139,7 +139,7 @@
             }
 
             // shoutouts https://javascript.info/fetch-progress
-            const response = await fetch('https://we-are-jammin.xyz/jammin.mp4').catch(e);
+            const response = await fetch('https://jam.bbakhishov.com').catch(e);
             const reader = response.body.getReader();
             const contentLength = +response.headers.get('Content-Length');
             let receivedLength = 0;
